--- a/angularblog/ng-angularblog-frontend/src/app/header-component/header-component.component.html
+++ b/angularblog/ng-angularblog-frontend/src/app/header-component/header-component.component.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgAngularblogFrontend</title>
+  <title>Blog</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="container-fluid">
 <div class = "card-header">
   <div class="container">
     <div class="row">
@@ -15,7 +15,7 @@
       <div class="col-md-6"><h1> <a href="" class="title"> Tech Blog</a> </h1></div>
       <div class="col-md-6">
         <a href="" class="login btn btn-default">Login</a>
-        <a href="" class="register btn btn-default">Register</a>
+        <a href="/register" class="register btn btn-default">Register</a>
       </div>
     </div>
   </div>
