--- a/angularblog/ng-angularblog-frontend/src/app/auth/register/register.component.html
+++ b/angularblog/ng-angularblog-frontend/src/app/auth/register/register.component.html
@@ -1,1 +1,23 @@
-<p>register works!</p>
+<div class="container">
+  <!--justify container center-->
+  <form class="form-signup" [formGroup]="registerForm" (ngSubmit)="OnSubmit()">
+    <h2 class="h3 mb-3 font-weight-bold">Sign Up</h2>
+    <div class="form-group">
+    <label for="username" class="sr-only">Username</label>
+      <input type="text" id="username" [formControlName]="'username'"  class="form-control" placeholder="Enter your name" required="" autofocus="">
+    </div>
+    <div class="form-group">
+      <label for="email" class="sr-only">Username</label>
+      <input type="text" id="email" [formControlName]="'email'"  class="form-control" placeholder="Enter your email" required="" autofocus="">
+    </div>
+    <div class="form-group">
+      <label for="password" class="sr-only">Username</label>
+      <input type="password" id="password" [formControlName]="'password'" class="form-control" placeholder="Enter your password" required="" autofocus="">
+    </div>
+    <div class="form-group">
+      <label for="confirmPassword" class="sr-only">Username</label>
+      <input type="password" id="confirmPassword" [formControlName]="'confirmPassword'" class="form-control" placeholder="Enter your name" required="" autofocus="">
+    </div>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+  </form>
+</div>
