--- a/angularblog/ng-angularblog-frontend/src/app/header-component/header-component.component.css
+++ b/angularblog/ng-angularblog-frontend/src/app/header-component/header-component.component.css
@@ -1,8 +1,9 @@
 .card-header{
   padding: 5px 20px;
-  background-color: deepskyblue;
+  background-color: orangered;
 
 }
+
 
 .title{
   text-decoration: none;
@@ -15,4 +16,9 @@
   text-decoration: none;
   color: aliceblue;
   padding-top: 5px;
+
 }
+
+
+
+
